Final polish: Fix syntax, UI glitches, and apply Discord theme

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 </div>
             </div>
 
-            <div class="chat-area">
+            <div class="chat-area" id="chatArea" style="display: none;">
                 <div class="chat-header">
                     <div class="btn-back" onclick="app.toggleSidebar()">⬅️</div>
                     <div class="avatar" style="width:36px; height:36px; font-size:14px;" id="chatAvatar">?</div>
