--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id=%22g%22 x1=%220%22 y1=%220%22 x2=%221%22 y2=%221%22><stop offset=%220%22 stop-color=%22%230084ff%22/><stop offset=%221%22 stop-color=%22%23b300ff%22/></linearGradient></defs><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22url(%23g)%22/><path d=%22M30 40 L50 60 L70 40 M30 55 L50 75 L70 55%22 stroke=%22white%22 stroke-width=%228%22 fill=%22none%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22/></svg>">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
+    <link rel="manifest" href="manifest.json?v=1.1">
     <meta name="theme-color" content="#0a0a0a">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -174,6 +174,18 @@
             <div id="encryptionStatus" style="font-size:11px; margin-bottom:15px; font-weight:600;"></div>
             <input type="text" id="editName" class="big-input" placeholder="Имя пользователя">
 
+            <div id="syncRegistrySection"
+                style="margin: 20px 0; background:rgba(0,132,255,0.08); padding:15px; border-radius:15px; border:1px solid rgba(0,132,255,0.3); box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+                <h3 style="font-size:15px; margin:0 0 8px; color:#3fa9ff; display:flex; align-items:center; gap:8px;">
+                    <span style="font-size:18px;">🔄</span> Синхронизация (Auto-Sync)
+                </h3>
+                <p style="font-size:11px; color:var(--text-dim); margin-bottom:12px; line-height:1.4;">Это устройство не
+                    связано. Нажмите кнопку, чтобы получить код для программы или другого браузера.</p>
+                <button class="btn-main"
+                    style="background:var(--accent); font-size:14px; height:40px; box-shadow: 0 4px 10px rgba(0,132,255,0.3);"
+                    onclick="app.showSyncOverlay('source')">Связать устройства</button>
+            </div>
+
             <div style="margin: 15px 0; border-top: 1px solid var(--border); padding-top: 15px;">
                 <p style="font-size:12px; color:var(--text-dim); margin-bottom:10px; text-align:left;">Для изменения
                     данных введите текущий пароль:</p>
@@ -188,14 +200,6 @@
 
             <div class="settings-section"
                 style="text-align:left; margin-top:20px; border-top:1px solid var(--border); padding-top:15px;">
-                <div id="syncRegistrySection"
-                    style="margin-bottom:25px; background:rgba(0,132,255,0.05); padding:12px; border-radius:10px; border:1px solid rgba(0,132,255,0.2);">
-                    <h3 style="font-size:14px; margin:0 0 5px; color:#0084ff;">🔄 Синхронизация данных (Auto-Sync)</h3>
-                    <p style="font-size:11px; color:var(--text-dim); margin-bottom:10px;">Свяжите девайсы по коду, и они
-                        будут обновляться автоматически в фоне.</p>
-                    <button class="btn-main" style="background:var(--accent); font-size:13px; height:35px;"
-                        onclick="app.showSyncOverlay('source')">Синхронизировать это устройство</button>
-                </div>
 
                 <h3 style="font-size:14px; margin-bottom:10px;">🛡️ Безопасность</h3>
 
@@ -453,7 +457,7 @@
         </div>
     </div>
 
-    <script src="js/app.js" defer></script>
+    <script src="js/app.js?v=1.1" defer></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
