Force SW update v1.1 and Network-First strategy

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
         <div class="modal">
             <div style="position:absolute; top:20px; right:20px; font-size:24px; cursor:pointer; color:var(--text-dim);"
                 onclick="document.getElementById('settings-overlay').style.display='none'">✕</div>
-            <h1>Настройки</h1>
+            <h1>Настройки <span
+                    style="font-size:10px; color:var(--text-dim); vertical-align:middle; margin-left:10px; font-weight:normal;">v1.1</span>
+            </h1>
             <p>Безопасность и профиль</p>
             <div id="encryptionStatus" style="font-size:11px; margin-bottom:15px; font-weight:600;"></div>
             <input type="text" id="editName" class="big-input" placeholder="Имя пользователя">
