--- a/index.html
+++ b/index.html
@@ -439,21 +439,22 @@
 
             <!-- Source View -->
             <div id="syncSourceView" style="display:none;">
-                <p style="font-size:12px; color:var(--text-dim); margin-bottom:20px;">Введите этот код на новом
+                <p style="font-size:13px; color:var(--text-dim); margin-bottom:15px;">Введите <b>Source ID</b> на другом
                     устройстве:</p>
                 <div id="syncCodeDisplay"
-                    style="font-size:32px; font-weight:bold; color:var(--accent); letter-spacing:5px; margin-bottom:20px;">
+                    style="font-family: 'Courier New', Courier, monospace; font-size:15px; font-weight:bold; color:var(--accent); background:rgba(0,132,255,0.1); padding:15px; border-radius:10px; border:1px solid rgba(0,132,255,0.2); margin-bottom:20px; word-break:break-all; line-height:1.4;">
                     ------</div>
                 <div id="syncSourceStatus" style="font-size:11px; color:var(--text-dim);">Ожидание подключения...</div>
             </div>
 
             <!-- Target View -->
             <div id="syncTargetView" style="display:none;">
-                <p style="font-size:12px; color:var(--text-dim); margin-bottom:20px;">Введите код с основного
-                    устройства:</p>
-                <input type="text" id="syncInputCode" class="big-input" placeholder="000000" maxlength="6"
-                    style="text-align:center; font-size:24px; letter-spacing:4px;">
-                <button class="btn-main" onclick="app.startSyncPull()">Подключиться и перенести</button>
+                <p style="font-size:13px; color:var(--text-dim); margin-bottom:15px;">Вставьте <b>Source ID</b> с
+                    основного устройства:</p>
+                <input type="text" id="syncInputCode" class="big-input" placeholder="p2p_user_..."
+                    style="text-align:center; font-size:14px; font-family: monospace;">
+                <button class="btn-main" style="margin-top:15px;" onclick="app.startSyncPull()">Подключиться и
+                    перенести</button>
                 <div id="syncTargetStatus" style="font-size:11px; color:var(--text-dim); margin-top:15px;"></div>
             </div>
         </div>
