Add pre-login sync: import profile on fresh devices without account

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                     style="height:35px; font-size:14px;">Регистрация</button>
                 <button class="btn-main" id="modeLogin" onclick="app.setSetupMode('login')"
                     style="height:35px; font-size:14px; background:#252525;">Вход</button>
+                <button class="btn-main" id="modeSync" onclick="app.startPreLoginSync()"
+                    style="height:35px; font-size:14px; background:#0084ff;">🔄 Синхрон.</button>
             </div>
 
             <p id="setupDesc">Выберите имя, цвет и пароль</p>
