--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
     <div class="app-container">
         <div class="sidebar" id="sidebar">
             <div class="profile-header">
-                <div class="avatar" id="myAvatarDisplay">?</div>
                 <div class="profile-info">
                     <h2 id="myNickDisplay">Загрузка...</h2>
-                    <small id="myIdDisplay" onclick="app.copyMyId()" style="cursor:pointer; opacity:0.7;">Нажмите to
-                        Copy ID</small>
+                    <small id="myIdDisplay" onclick="app.copyMyId()" style="cursor:pointer; opacity:0.7;">ID:
+                        ...</small>
                 </div>
-                <div class="btn-settings" onclick="app.openSettings()">⚙️</div>
+                <!-- Settings hidden/moved as per screenshot, or kept subtle -->
+                <div class="btn-settings" onclick="app.openSettings()" style="opacity: 0;">⚙️</div>
             </div>
 
             <div class="search-container" style="display:flex; gap:10px; align-items:center;">
@@ -338,7 +338,7 @@
                     spellcheck="false" oninput="app.refreshContacts()" name="p2p_search_v3" readonly
                     onfocus="this.removeAttribute('readonly')">
                 <div class="btn-settings" onclick="document.getElementById('group-create-overlay').style.display='flex'"
-                    title="Создать группу" style="margin:0; font-size:18px;">👥</div>
+                    title="Создать группу" style="margin:0; font-size:18px; color:#444;">👥</div>
             </div>
 
             <div class="contact-list" id="contactList">
@@ -363,7 +363,6 @@
                 <div class="avatar" style="width:36px; height:36px; font-size:14px;" id="chatAvatar">?</div>
                 <div class="chat-header-info">
                     <h3 id="chatName">Выберите чат</h3>
-                    <span id="chatStatus">...</span>
                 </div>
                 <div id="chatSafety" class="fingerprint" style="margin-left:auto; display:none;"
                     onclick="app.showSafetyInfo()">
@@ -394,12 +393,18 @@
 
         <!-- Empty State -->
         <div id="emptyChat" class="chat-area empty-state">
-            <div style="text-align:center;">
-                <div style="font-size: 64px; margin-bottom: 20px; opacity: 0.3;">💬</div>
-                <h2>Выберите, с кем пообщаться</h2>
-                <p style="color:var(--text-dim);">Ваши сообщения защищены сквозным шифрованием (E2EE)</p>
-                <button class="btn-main" style="margin-top:20px; width:auto; background:#252525;"
-                    onclick="document.getElementById('contactSearch').focus()">Найти собеседника</button>
+            <div
+                style="flex:1; display:flex; flex-direction:column; justify-content:flex-end; padding-bottom:100px; align-items:center;">
+                <div
+                    style="background: rgba(30,30,30,0.8); padding: 8px 16px; border-radius: 20px; font-size: 13px; color: #aaa; display:flex; align-items:center; gap:8px;">
+                    <span>👈</span> Выберите контакт слева или пригласите друга по ссылке
+                </div>
+            </div>
+
+            <!-- Fake Input Bar for Empty State visual match -->
+            <div class="input-bar" style="opacity:0.5; pointer-events:none;">
+                <input type="text" placeholder="Ваше сообщение..." disabled>
+                <button class="btn-send" disabled>➤</button>
             </div>
         </div>
     </div>
