--- a/index.html
+++ b/index.html
@@ -321,8 +321,9 @@
             <div class="profile-header">
                 <div class="profile-info">
                     <h2 id="myNickDisplay">Загрузка...</h2>
-                    <small id="myIdDisplay" onclick="app.copyMyId()" style="cursor:pointer; opacity:0.7;">ID:
-                        ...</small>
+                    <small id="myIdDisplay" onclick="app.copyMyId()" style="cursor:pointer; opacity:0.7;">
+                        ID: ... <span class="id-status-dot"></span>
+                    </small>
                 </div>
                 <!-- Settings hidden/moved as per screenshot, or kept subtle -->
                 <div class="btn-settings" onclick="app.openSettings()" style="opacity: 0;">⚙️</div>
@@ -362,7 +363,7 @@
                 <div class="btn-back" onclick="app.toggleSidebar()">⬅️</div>
                 <div class="avatar" style="width:36px; height:36px; font-size:14px;" id="chatAvatar">?</div>
                 <div class="chat-header-info">
-                    <h3 id="chatName">Выберите чат</h3>
+                    <h3 id="chatName"></h3>
                 </div>
                 <div id="chatSafety" class="fingerprint" style="margin-left:auto; display:none;"
                     onclick="app.showSafetyInfo()">
