--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id=%22g%22 x1=%220%22 y1=%220%22 x2=%221%22 y2=%221%22><stop offset=%220%22 stop-color=%22%230084ff%22/><stop offset=%221%22 stop-color=%22%23b300ff%22/></linearGradient></defs><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22url(%23g)%22/><path d=%22M30 40 L50 60 L70 40 M30 55 L50 75 L70 55%22 stroke=%22white%22 stroke-width=%228%22 fill=%22none%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22/></svg>">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v=1.3">
-    <link rel="manifest" href="manifest.json?v=1.3">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css?v=2.0">
+    <link rel="manifest" href="manifest.json?v=2.0">
     <meta name="theme-color" content="#0a0a0a">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -364,6 +364,7 @@
                 <div class="avatar" style="width:36px; height:36px; font-size:14px;" id="chatAvatar">?</div>
                 <div class="chat-header-info">
                     <h3 id="chatName"></h3>
+                    <span id="chatStatus"></span>
                 </div>
                 <div id="chatSafety" class="fingerprint" style="margin-left:auto; display:none;"
                     onclick="app.showSafetyInfo()">
@@ -398,11 +399,11 @@
                 <h3>Выберите чат</h3>
             </div>
             <div
-                style="flex:1; display:flex; flex-direction:column; justify-content:flex-end; padding-bottom:100px; align-items:center;">
-                <div
-                    style="background: rgba(30,30,30,0.8); padding: 8px 16px; border-radius: 20px; font-size: 13px; color: #aaa; display:flex; align-items:center; gap:8px;">
-                    <span>👈</span> Выберите контакт слева или пригласите друга по ссылке
-                </div>
+                style="flex:1; display:flex; flex-direction:column; justify-content:center; align-items:center; gap:16px; padding-bottom:60px;">
+                <div style="font-size: 48px; animation: float 3s ease-in-out infinite;">💬</div>
+                <h2 style="font-size:20px; font-weight:600; color:#e6edf3;">Начните общение</h2>
+                <p style="font-size:13px; color:#8b949e; text-align:center; max-width:280px; line-height:1.5;">Выберите
+                    контакт слева или пригласите друга по ссылке</p>
             </div>
 
             <!-- Fake Input Bar for Empty State visual match -->
@@ -460,12 +461,12 @@
     </div>
 
     <!-- Core & Modules -->
-    <script src="js/app.js?v=1.3"></script>
-    <script src="js/utils.js?v=1.3"></script>
-    <script src="js/crypto.js?v=1.3"></script>
-    <script src="js/auth.js?v=1.3"></script>
-    <script src="js/sync.js?v=1.3"></script>
-    <script src="js/ui.js?v=1.3"></script>
+    <script src="js/app.js?v=2.0"></script>
+    <script src="js/utils.js?v=2.0"></script>
+    <script src="js/crypto.js?v=2.0"></script>
+    <script src="js/auth.js?v=2.0"></script>
+    <script src="js/sync.js?v=2.0"></script>
+    <script src="js/ui.js?v=2.0"></script>
 
     <!-- Init -->
     <script>
