--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id=%22g%22 x1=%220%22 y1=%220%22 x2=%221%22 y2=%221%22><stop offset=%220%22 stop-color=%22%230084ff%22/><stop offset=%221%22 stop-color=%22%23b300ff%22/></linearGradient></defs><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22url(%23g)%22/><path d=%22M30 40 L50 60 L70 40 M30 55 L50 75 L70 55%22 stroke=%22white%22 stroke-width=%228%22 fill=%22none%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22/></svg>">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v=2.4">
-    <link rel="manifest" href="manifest.json?v=2.4">
+    <link rel="stylesheet" href="css/style.css?v=2.5">
+    <link rel="manifest" href="manifest.json?v=2.5">
     <meta name="theme-color" content="#0a0a0a">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -150,16 +150,16 @@
 
     <!-- Экран блокировки -->
     <div id="lock-overlay" class="lock-screen" style="display: none;">
-        <div class="avatar" id="lockAvatar" style="width:80px; height:80px; font-size:32px; margin-bottom:20px;">?</div>
+        <div class="avatar" id="lockAvatar" style="width:80px; height:80px; font-size:32px;">?</div>
         <h2 id="lockNick">С возвращением</h2>
-        <p style="color:var(--text-dim); margin-bottom:30px;">Введите пароль для входа</p>
-        <div style="max-width:300px; width:90%;">
+        <p style="color:var(--text-dim);">Введите пароль для входа</p>
+        <div style="max-width:300px; width:90%; display:flex; flex-direction:column; gap:10px;">
             <input type="password" id="lockPass" class="big-input" placeholder="Пароль"
                 onkeypress="if(event.key==='Enter') app.unlock()">
             <button class="btn-main" onclick="app.unlock()">Разблокировать</button>
-            <div id="lockError" style="color:var(--danger); font-size:12px; margin-top:10px; text-align:center;"></div>
-            <p style="font-size:11px; color:var(--text-dim); margin-top:30px; cursor:pointer; text-decoration:underline; text-align:center;"
-                onclick="app.logout(true)">Сбросить текущий аккаунт</p>
+            <div id="lockError" style="color:var(--danger); font-size:12px; text-align:center;"></div>
+            <p style="font-size:11px; color:var(--text-dim); margin-top:20px; cursor:pointer; text-decoration:underline; text-align:center;"
+                onclick="app.clearData()">Сбросить текущий аккаунт</p>
         </div>
     </div>
 
@@ -459,12 +459,12 @@
     </div>
 
     <!-- Core & Modules -->
-    <script src="js/app.js?v=2.4"></script>
-    <script src="js/utils.js?v=2.4"></script>
-    <script src="js/crypto.js?v=2.4"></script>
-    <script src="js/auth.js?v=2.4"></script>
-    <script src="js/sync.js?v=2.4"></script>
-    <script src="js/ui.js?v=2.4"></script>
+    <script src="js/app.js?v=2.5"></script>
+    <script src="js/utils.js?v=2.5"></script>
+    <script src="js/crypto.js?v=2.5"></script>
+    <script src="js/auth.js?v=2.5"></script>
+    <script src="js/sync.js?v=2.5"></script>
+    <script src="js/ui.js?v=2.5"></script>
 
     <!-- Init -->
     <script>
